Fixed navmenu gap issue

--- a/components/navHome/navItems/navitems.scss
+++ b/components/navHome/navItems/navitems.scss
@@ -101,7 +101,7 @@
 }
 .duplicate {
   position: absolute;
-  top: 3.75vw;
+  top: 4.84vw;
   width: 2.6vw;
   height: 1.3vw;
   overflow: hidden;
@@ -222,3 +222,4 @@
   border-image: linear-gradient(96.77deg, #f09819 -28.03%, #ff512f 134.69%);
   border-image-slice: 1;
 }
+
